tests/types/errors/option_join_right_left_unguarded.err
1. error[T058]: dereference of optional `o` requires a none guard
  --> tests/types/errors/option_join_right_left_unguarded.mochi:12:21

 12 |              select o.id
    |                     ^

help:
  Narrow with `if o != none { ... }` first, or supply a fallback (`?? default`).
